# np-task

./: Cargo.toml  README.md
assets/: places_postcodes.csv
src/client/: main.rs
src/server/: main.rs
